--- a/onemile/src/main/webapp/resources/css/wboard.css
+++ b/onemile/src/main/webapp/resources/css/wboard.css
@@ -301,13 +301,13 @@
 .wboard-detail-content .article-attached{margin-bottom:30px}
 .wboard-detail-content .article-attached li{margin-bottom:10px;}
 .wboard-detail-content .article-attached li a{display:inline-block;min-width:224px;height:33px;padding:0 10px 0 40px;line-height:33px;font-size:14px;border:1px solid #e4e4e4;border-radius:10px;background:url(/resources/static/img/common/icon_attached_down.png) no-repeat 17px center;background-size:12px 15px}
-.wboard-detail-bottom{padding:0 10px 30px;background:#e9ecef;padding-left:env(safe-area-inset-left);padding-right:env(safe-area-inset-right);}
+.wboard-detail-bottom{padding-top:10px;padding-bottom:10px;background:#e9ecef;padding-left:env(safe-area-inset-left);padding-right:env(safe-area-inset-right);}
 .wboard-detail-bottom .wboard-comment{width:100%;padding:20px 0;}
 .wboard-detail-bottom .wboard-comment .comment-num{margin-bottom:20px;font-size:16px;padding: 0 16px;font-weight: bold;}
 .wboard-detail-bottom .wboard-comment .main-comment{padding-bottom:20px}
 .wboard-detail-bottom .wboard-comment .main-comment textarea{display:block;margin-bottom:10px;width:100%;height:80px;padding:10px;font-size:13px;line-height:18px;border:1px solid #e4e4e4;background:#fff;box-sizing:border-box !important;}
 .wboard-detail-bottom .wboard-comment .main-comment .btn-wrap{text-align:right;}
-.wboard-detail-btn-wrap{padding-bottom:50px;text-align:center}
+.wboard-detail-btn-wrap{text-align:center}
 .wboard-comment .comment-box{margin-bottom:15px;border-bottom:none}
 .wboard-comment .comment-wrap{margin-top:20px;padding:20px;background:#fff;border:1px solid #e4e4e4;}
 .wboard-comment .comment-wrap .comment-info{position:relative;margin-bottom:10px;height:35px;}
