cobuy list 수정, header 모바일 버전 수정

--- a/onemile/src/main/webapp/resources/css/layout-w.css
+++ b/onemile/src/main/webapp/resources/css/layout-w.css
@@ -3768,12 +3768,11 @@ html.wadiz-app .web-header {
 
 .web-header .wadiz-logo>a {
     display: block;
-    padding: 4px
 }
 
 @media screen and (min-width:1220px) {
     .web-header .wadiz-logo>a {
-        padding: 4px
+        padding: 0;
     }
 }
 
