--- a/onemile/src/main/resources/mybatis/mapper/report/member-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/member-mapper.xml
@@ -8,6 +8,11 @@
 			mrl_seq.nextval , #{memberNo}, #{rlNo}
 		)
 	</insert>
-	
+	<update id="delete" parameterType="int">
+		update mrl set HIDDENYN='Y' where rl_no = #{rlNo}
+	</update>
+	<delete id="adminDelete" parameterType="int">
+		delete from mrl where rl_no = #{rlNo}
+	</delete>
 	
 </mapper>
