--- a/onemile/src/main/resources/mybatis/mapper/report/cobuyRL-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/cobuyRL-mapper.xml
@@ -2,10 +2,10 @@
 <!DOCTYPE mapper
  PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
  "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="srl">
+<mapper namespace="cbrl">
 	<insert id="reg" parameterType="MiddleRLVO">
-		insert into socialRL(srl_no, social_no, rl_no) values(
-			srl_seq.nextval , #{connTableNo}, #{rlNo}
+		insert into socialRL(cbrl_no, cobuy_no, rl_no) values(
+			cbrl_seq.nextval , #{connTableNo}, #{rlNo}
 		)
 	</insert>
 	<update id="delete" parameterType="int">
