--- a/onemile/src/main/resources/mybatis/mapper/report/commuRL-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/commuRL-mapper.xml
@@ -5,7 +5,7 @@
 <mapper namespace="crl">
 	<insert id="reg" parameterType="MiddleRLVO">
 		insert into commuRL(crl_no,commu_no,rl_no) values(
-			crl_seq.nextval , #{commuNo}, #{rlNo}
+			crl_seq.nextval , #{connTableNo}, #{rlNo}
 		)
 	</insert>
 	<update id="delete" parameterType="int">
