--- a/onemile/src/main/resources/mybatis/mapper/report/report-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/report-mapper.xml
@@ -4,8 +4,8 @@
  "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
 <mapper namespace="rl">
 	<insert id="reg" parameterType="ReportRegVO">
-		insert into rl(RL_NO, REPORTER, REPOTREASON, RLDATE, HIDDENYN) values(
-			#{rlNo} , #{reporterNo},#{repotReason},#{rlDate},'Y'
+		insert into rl(RL_NO, REPORTER, REPOTREASON) values(
+			#{rlNo} , #{reporterNo},#{repotReason}
 		)
 	</insert>
 	
@@ -15,8 +15,8 @@
 	<delete id="adminDelete" parameterType="int">
 		delete from rl where rl_no = #{rlNo}
 	</delete>
-	
-	<select id="getRlList" parameterType="ReportVO">
+	<!-- 
+	<select id="getRlList" parameterType="ReportRegVO">
 		
-	</select>
+	</select> -->
 </mapper>
