--- a/onemile/src/main/resources/mybatis/mapper/report/report-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/report-mapper.xml
@@ -16,7 +16,7 @@
 		delete from rl where rl_no = #{rlNo}
 	</delete>
 	
-	<select id="getRlList" parameterType="ReportVO">
+	<!-- <select id="getRlList" parameterType="ReportVO">
 		
-	</select>
+	</select> -->
 </mapper>
