--- a/onemile/src/main/resources/mybatis/mapper/report/commuRL-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/commuRL-mapper.xml
@@ -9,10 +9,10 @@
 		)
 	</insert>
 	<update id="delete" parameterType="int">
-		update crl set HIDDENYN='Y' where rl_no = #{rlNo}
+		update commuRL set HIDDENYN='Y' where rl_no = #{rlNo}
 	</update>
 	<delete id="adminDelete" parameterType="int">
-		delete from crl where rl_no = #{rlNo}
+		delete from commuRL where rl_no = #{rlNo}
 	</delete>
 	
 </mapper>
