--- a/onemile/src/main/resources/mybatis/mapper/report/socialRL-mapper.xml
+++ b/onemile/src/main/resources/mybatis/mapper/report/socialRL-mapper.xml
@@ -9,10 +9,10 @@
 		)
 	</insert>
 	<update id="delete" parameterType="int">
-		update srl set HIDDENYN='Y' where rl_no = #{rlNo}
+		update socialRL set HIDDENYN='Y' where rl_no = #{rlNo}
 	</update>
 	<delete id="adminDelete" parameterType="int">
-		delete from srl where rl_no = #{rlNo}
+		delete from socialRL where rl_no = #{rlNo}
 	</delete>
 	
 </mapper>
