소셜링 상세 수정 및 소셜목록 검색

--- a/onemile/src/main/webapp/resources/css/detail.css
+++ b/onemile/src/main/webapp/resources/css/detail.css
@@ -74,11 +74,9 @@
   font-weight: normal;
   margin-right: 5px;
 }
-
-.detail_carousel_row .col-12 {
+.detail_carousel_row{
   z-index: -1;
 }
-
 .contaier {
   position: relative;
 }
